[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://apps/modelica_godot/ui/simulation_panel.gd" id="1"]
[ext_resource type="Script" path="res://apps/modelica_godot/ui/visualization.gd" id="2"]

[node name="SimulationPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Controls" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="PlayButton" type="Button" parent="Controls"]
layout_mode = 2
text = "Play"

[node name="ResetButton" type="Button" parent="Controls"]
layout_mode = 2
text = "Reset"

[node name="TimeLabel" type="Label" parent="Controls"]
layout_mode = 2
text = "Time: 0.00 s"

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Visualization" type="Control" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2")

[node name="PlotContainer" type="Control" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PositionPlot" type="Line2D" parent="VSplitContainer/PlotContainer"]
default_color = Color(0, 1, 0, 1)

[node name="VelocityPlot" type="Line2D" parent="VSplitContainer/PlotContainer"]
default_color = Color(0, 0, 1, 1)

[node name="AccelerationPlot" type="Line2D" parent="VSplitContainer/PlotContainer"]
default_color = Color(1, 0, 0, 1)

[node name="Legend" type="HBoxContainer" parent="VSplitContainer/PlotContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="PosLabel" type="Label" parent="VSplitContainer/PlotContainer/Legend"]
layout_mode = 2
text = "Position"

[node name="VelLabel" type="Label" parent="VSplitContainer/PlotContainer/Legend"]
layout_mode = 2
text = "Velocity"

[node name="AccLabel" type="Label" parent="VSplitContainer/PlotContainer/Legend"]
layout_mode = 2
text = "Acceleration" 